--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
          <div class="col-md-8 col-12 text-center">
 		
             <h2 class="text-center">Bewerbung als Marketing-<span class="text-danger">Experte/Vertrieb (Teilzeit)</span></h2>
-  
+  <p class="font-color-light">Email: kenfelixzacharias@gmail.com / Tel: 015164011132</p>
          </div>
       </div>
    </div>
