--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
                      <img  src="img/shape-25.png" alt="Grafische Punkte" title="Grafisches Element" class="position-absolute start-0 top-0" loading="lazy">
                   </picture>
                   <picture>
-                     <source srcset="img/kennethzach.webp" type="image/webp" class="img-fluid">
-                     <img src="img/kennethzach.png" alt="" title="" class="img-fluid" loading="lazy">
+                   
+                     <img src="img/ken.png" alt="" title="" class="img-fluid" loading="lazy">
                   </picture>
                   <div class="bounce-2 bounce-container bg-light p-2 rounded w-75 position-absolute" style="bottom: -10px; right: 30px;">
                      <div class="d-flex align-items-center">
@@ -115,7 +115,7 @@
                         <br> Mit über 20 Jahren Expertise im Marketing entwickle ich erfolgreiche Strategien für digitale Medien und Vertrieb. Meine Schwerpunkte liegen in den Bereichen Performance Marketing, Content-Erstellung und Kampagnenoptimierung. Neben meiner Leidenschaft für Marketing begeistere ich mich für Kampfsport, Musik und verbringe gerne Zeit mit Familie, Freunden und meiner Hündin Else
 						</p>    
                         <div class="insta-button d-flex">
-                           <a rel="nofollow" class="rounded"  href="img/lebenslauf.pdf" title="" class="text-center">
+                           <a rel="nofollow" class="rounded"  href="img/Lebenslauf_Ken Felix Zacharias.pdf" title="" class="text-center">
                                                   <img  src="img/lebenslauf.png" alt="Grafische Punkte" title="Grafisches Element"  loading="lazy">
 
                               Lebenslauf PDF &rarr;
