--- a/index.html
+++ b/index.html
@@ -627,7 +627,7 @@
                   height="400"
                   loading="lazy">
               </picture>
-              <span class="comparison-label before-label">Ohne gute Mitarbeiter</span>
+              <span class="comparison-label before-label">Mit guten Mitarbeitern</span>
             </div>
             <!-- Nachher-Bild (Prachtexemplar) -->
             <div class="after-image">
@@ -639,7 +639,7 @@
                   height="400"
                   loading="lazy">
               </picture>
-              <span class="comparison-label after-label">Mit guten Mitarbeitern</span>
+              <span class="comparison-label after-label">Ohne gute Mitarbeiter</span>
             </div>
             <!-- Slider Handle -->
             <div class="slider-handle"
