--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 
         /* Sticky Button */
          .my-button { z-index: 100; transition: all 0.3s ease; }
-         .my-button.fixed { position: fixed; left: 50%; text-align: center; transform: translateX(-50%); top: 75px; /* Adjusted top position */ padding: 0 15px; width: auto; }
+         .my-button.fixed { position: fixed; left: 50%; text-align: center; transform: translateX(-50%); top: 75px; /* Adjusted top position */ padding: 0 15px; width: 80%; text-center; }
          .my-button.fixed a { display: inline-flex; width: auto; /* Let it size based on content */ padding: 8px 20px; /* Slightly smaller padding */ margin: 0; border-radius: 30px; background-color: rgba(17, 24, 34, 0.9); /* Darker background when fixed */ box-shadow: 0 4px 10px rgba(0,0,0,0.2); }
          .my-button.fixed a:hover { background-color: #1ab69d; }
 
@@ -333,7 +333,7 @@
     <nav class="navbar sticky-top navbar-expand-lg bg-dark shadow" data-bs-theme="dark">
         <div class="container justify-content-center"> <!-- Zentriert den Inhalt im Container -->
             <a class="navbar-brand" href="#home" title="Zur Startseite">
-                Ken Zacharias
+                Ken Felix Zacharias
             </a>
         </div>
     </nav>
